[package]
name = "esr22-23"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bootstrapper"
path = "src/apps/bootstrapper.rs"

[[bin]]
name = "oNode"
path = "src/apps/oNode.rs"

[[bin]]
name = "server"
path = "src/apps/server.rs"

[lib]
name = "lib"
path = "src/lib/lib.rs"
crate-type = ["lib"]

[dependencies]
regex = "1.7.0"
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.1.1"
